Changelog
=========

Changes in Flask-Restless-NG
============================

Version 3.1.0 (2023-10-14):
-------------
- Added support for Flask 3.0
- Added support for Python 3.11
- Added support for Python 3.12
- Dropped support for Python 3.7


Version 3.0.0 (2023-03-19):
-------------
- Added support for SQLAlchemy 2.0
- Minimum required SQLAlchemy version: 1.4.18
- Minimum required Flask version: 2.2
- Drop Functions API support


Version 2.5.1 (2023-03-15):
-------------
- Restricted SQLAlchemy to <2.0. Support of 2.0 requires significant changes and will be a major release


Version 2.5.0 (2022-12-24):
-------------
- Added support for X-Forwarded- headers (pagination links now use the original host/proto) (#38)


Version 2.4.0 (2022-11-11):
-------------
- Clients can disable default sorting by using `sort=0` query parameter


Version 2.3.1:
-------------
- Fix for an incorrect error message
- Returns 500 instead 400 response code in case of serialization errors in POST requests
- Fix for pagination Flask-SQLAlchemy (now works also with 3.0+) (#37)


Version 2.3.0
------------
- Allow sorting of nested fields


Version 2.2.9
-------------
- Do not erase `type` field from `attributes` (#31)


Version 2.2.8
-------------
- Make sure that POST response contains actual values from the DB


Version 2.2.7
-------------
- Fix Server Error for null relationship in POST (#29)
- Allow session rollback in PATCH_RESOURCE, PATCH_RELATIONSHIP, POST_RELATIONSHIP post-processors (#28)


Version 2.2.6
-------------
- Escape user input in error messages to prevent potential server-side cross-site scripting
- 'status' field in error objects is now a string, as required by JSON API standard
  https://jsonapi.org/format/#error-objects
- Returns '400' status if page number is provided but page size is 0
- Returns '400' status if unknown field was used for sorting
- Allow rolling back the current session in `POST_RESOURCE` postprocessors (#28)


Version 2.2.5
-------------