@@ -4,6 +4,11 @@ Changelog
 Changes in Flask-Restless-NG
 ============================
 
+Unreleased
+-------------
+- Dropped savalidation support
+
+
 Version 3.1.0 (2023-10-14):
 -------------
 - Added support for Flask 3.0
